2005-04-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(yh/collapse-home-directory): new util function

	* dotemacs.el:
	(xtla): use xtla for arch repositories

	* dotemacs-cust.el:
	(custom-set-variables): use w3m as default browser
	(custom-set-variables): close planner files automatically, some xtla settings

	* config/planner-config.el:
	(planner-annotation-format-local-file-name): use the new yh/collapse-home-directory
	(planner-w3m): use w3m for web url handling

2005-04-18  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs-cust.el:
	(custom-set-variables): don't use another window for planner

2005-04-17  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/planner-config.el:
	removed buggy hacks
	(planner-log-edit): re-enable, with flush hack

	* dotemacs.el:
	(global-set-key): some keys for task creation

	* dotgnus.el:
	(planner-directory): set planner-directory since it has been dropped from planner-config

	* perso/psvn-hacked.el: updated to latest version from xsteve

2005-04-12  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/ediff-config.el: differ some initializations

	* config/planner-config.el:
	(planner-log-edit): use planner-log-edit to track commits
	(planner-log-edit-flush-lines-list): flush svn comments before commit
	removed useless old code
	(planner-config): planner-log-edit does not seem stable enough

	* config/muse-config.el:
	(muse-mode-highlight-p): re-enable colors in muse files

2005-04-05  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el: use generic-x for common configuration files

	* dotemacs.el:
	(minimal): new config file for vc-related operations
	(auto-mode-alist): add .djava (dynamic java) extension to java-mode

	* dotemacs-cust.el:
	(custom-set-variables): added some ecb settings

	* config/vc-config.el: initial checkin

2005-02-14  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/latex-config.el: new environments for slides
	(my-LaTeX-hook): externalize this hook

	* config/changelog-config.el: