@@ -89,6 +89,7 @@
  '(global-visible-mark-mode-exclude-alist (quote ("^\\*")))
  '(gnus-cacheable-groups ".*")
  '(gnus-uncacheable-groups nil)
+ '(graphviz-dot-preview-extension "ps")
  '(gud-chdir-before-run nil)
  '(hl-line-hack-exceptions (quote ("*eshell*" "*Calendar*")))
  '(hl-line-hack-face (quote highlight))
@@ -138,6 +139,7 @@
  '(planner-use-other-window nil)
  '(preview-default-option-list (quote ("displaymath" "floats" "graphics" "textmath" "footnotes")))
  '(prolog-system (quote swi))
+ '(read-quoted-char-radix 16)
  '(recentf-exclude (quote (":")))
  '(recentf-mode t nil (recentf))
  '(recentf-save-file "~/.emacs-recentf")
